perf(region,npc): apply primitive chunk packing, zero-allocation spatial hashing and Java 21 sequenced collections